--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mabel-Wynn-b-or-those-boys_73786
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Huntington, Faye
@@ -13,6 +16,8 @@ creator:
     gutenberg_agent_id: '37602'
     url: http://www.gutenberg.org/2009/agents/37602
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73786#Mabel-Wynn-b-or-those-boys
 gutenberg_issued: '2024-06-06'
 gutenberg_type: Text
 identifiers:
